Minor fixes with spacing

--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ body{
 	position: relative;
 	display: inline-block;
 	width: 10%;
-	margin: 0 0 0 40%;
+	margin: 2% 0 0 40%;
 	padding: 1%;
 	font-family: 'Roboto', sans-serif;
 	font-size: 40px;
